--- a/index.html
+++ b/index.html
@@ -1,39 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aula3</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+    <!-- ctrl +shift+I -->
+    <div class="container">
 
-    <h3> As imagens foram tiradas nas seguintes localidades :</h3>
+        <h3> As imagens foram tiradas nas seguintes localidades :</h3>
 
-    <ol>
-        <li>Serra do Rio do Rastro</li>
-        <li>Cambirela</li>    
-        <li>Praia do Rosa</li>
-    </ol>
+        <ol>
+            <li>Serra do Rio do Rastro</li>
+            <li>Cambirela</li>
+            <li>Praia do Rosa</li>
+        </ol>
 
-<!-- "ctrl + /" é o atalho do comentário  -->
-<!-- como inserir imagens na opágina? -->
-<!-- caminhos relativos -->
-<img src="serra.jpg" alt="Serra do Rio do Rastro" width="150" height="100">
-<br>
-<!-- colocar uma nova imagem na pasta 'images' e exibir na página -->
-<img src="images/cambirela.png" alt="Morro da Cambirela">
-<br>
-<!-- imagem pasta acima -->
-<img src="../images/praia.jpg" alt="Praia">
+        <!-- "ctrl + /" é o atalho do comentário  -->
+        <!-- como inserir imagens na opágina? -->
+        <!-- caminhos relativos -->
+        <img src="serra.jpg" alt="Serra do Rio do Rastro" width="150" height="100">
+        <br>
+        <!-- colocar uma nova imagem na pasta 'images' e exibir na página -->
+        <img src="images/cambirela.png" alt="Morro da Cambirela">
+        <br>
+        <!-- imagem pasta acima -->
+        <img src="../images/praia.jpg" alt="Praia">
 
-<!-- links -->
-<p>
-    
-    <a href="pagina2.html">Clique aqui</a>
+        <!-- links -->
+        <p>
 
-</p>
+            <a href="pagina2.html">Clique aqui</a>
 
+        </p>
 
+    </div>
 </body>
+
 </html>
